python/testData/quickFixes/PyAddImportQuickFixTest/localPlainImportForCommonPackageAlias/main.py
def main():
    <error descr="Unresolved reference 'np'">n<caret>p</error>.ndarray
